manifest/istio/external-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-external-service
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway                      # 1
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /audio
    - uri:
        prefix: /static
    route:
    - destination:
        host: ui-service            # 2
        port:
          number: 80
          ### client service
  - match:
      - uri:
          exact: /client
    route:
      - destination:
          host: client-service            # 3
          port:
            number: 80
